<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <ImageView
        android:id="@+id/Main_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:src="@drawable/background"
        app:layout_constraintBottom_toTopOf="@+id/c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/card_border"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/Main_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Main_background">

        <TextView
            android:id="@+id/Main_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/pink"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Main_option1"
            style="@style/Button_Option"
            android:contentDescription="@string/option_1"
            android:text="@string/option_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Main_question" />

        <Button
            android:id="@+id/Main_option2"
            style="@style/Button_Option"
            android:contentDescription="@string/option_2"
            android:text="@string/option_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Main_option1" />

        <Button
            android:id="@+id/Main_option3"
            style="@style/Button_Option"
            android:contentDescription="@string/option_3"
            android:text="@string/option_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Main_option2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/Main_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:contentDescription="@string/restart_quiz"
        android:text="@string/restart_quiz"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>